--- a/POP-SF-53-2016-master/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/UI/AkcijaDodavanjeIzmene.xaml
+++ b/POP-SF-53-2016-master/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/UI/AkcijaDodavanjeIzmene.xaml
@@ -21,7 +21,7 @@
         <Label Content="Pocetak akcije:" HorizontalAlignment="Left" Margin="30,20,0,0" VerticalAlignment="Top" Width="100" />
         <Label Content="Kraj akcije:" HorizontalAlignment="Left" Margin="30,50,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.508,-0.169" Width="100"/>
         <Label Content="Popust:" HorizontalAlignment="Left" Margin="30,230,0,0" VerticalAlignment="Top" Width="100"/>
-        <TextBox x:Name="tbPopust" HorizontalAlignment="Left" Height="23" Margin="140,230,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="130" VerticalContentAlignment="Center">
+        <TextBox x:Name="tbPopust" HorizontalAlignment="Left" Height="23" Margin="140,230,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="130" VerticalContentAlignment="Center" MaxLength="3">
             <TextBox.Text>
                 <Binding Path="Popust" UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
@@ -32,7 +32,21 @@
         </TextBox>
         <DatePicker x:Name="dpPocetak"   SelectedDate="{Binding Path=PocetakAkcije}" IsEnabled="False"  HorizontalAlignment="Left" Margin="140,20,0,0" VerticalAlignment="Top" Width="130"/>
         <DatePicker  x:Name="dpKraj" SelectedDate="{Binding Path=KrajAkcije}" HorizontalAlignment="Left" Margin="140,50,0,0" VerticalAlignment="Top" Width="130"/>
-        <Button x:Name="btnPotvrdi" Content="Potvrdi" HorizontalAlignment="Left" Margin="100,275,0,0" VerticalAlignment="Top" Width="85" Height="30" IsDefault="True" Click="Potvrdi" RenderTransformOrigin="0.351,1.391"/>
+        <Button x:Name="btnPotvrdi" Content="Potvrdi" HorizontalAlignment="Left" Margin="100,275,0,0" VerticalAlignment="Top" Width="85" Height="30" IsDefault="True" Click="Potvrdi" RenderTransformOrigin="0.351,1.391">
+            <Button.Style>
+                <Style TargetType="Button">
+                    <Setter Property="IsEnabled" Value="False"/>
+                    <Style.Triggers>
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition Binding="{Binding Path=(Validation.HasError), ElementName=tbPopust}" Value="False"/>
+                            </MultiDataTrigger.Conditions>
+                            <Setter Property="IsEnabled" Value="True"/>
+                        </MultiDataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
         <Button x:Name="btnOtkazi" Content="Otkazi" HorizontalAlignment="Left" Margin="240,275,0,0" VerticalAlignment="Top" Width="85" Height="30" IsCancel="True" RenderTransformOrigin="0.082,1.067"/>
         <DataGrid x:Name="dgNamestajAkcija" CanUserAddRows="False" CanUserDeleteRows="False" ColumnWidth="*" HorizontalAlignment="Left" Height="140" Margin="30,83,0,0" VerticalAlignment="Top" Width="300" AutoGeneratingColumn="dgNamestajAkcija_AutoGeneratingColumn"/>
         <Button x:Name="btnDodaj" Content="Dodaj" HorizontalAlignment="Left" Height="33" Margin="345,100,0,0" VerticalAlignment="Top" Width="92" Click="btnDodaj_Click"/>
