--- a/POP-SF-53-2016-master/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/UI/DodatneUslugeDodavanjeIzmene.xaml
+++ b/POP-SF-53-2016-master/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/UI/DodatneUslugeDodavanjeIzmene.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:POP_SF_53_2016_GUI.UI"
         mc:Ignorable="d"
-        Title="DodatneUslugeDodavanjeIzmene" Height="300" Width="450" Background="#4169E1" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        Title="DodatneUslugeDodavanjeIzmene" Height="280" Width="450" Background="#4169E1" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Window.Resources>
         <ControlTemplate x:Key="TextBoxError">
             <DockPanel LastChildFill="True">
@@ -20,7 +20,7 @@
     <Grid>
         <Label Content="Naziv:" HorizontalAlignment="Left" Margin="90,50,0,0" VerticalAlignment="Top" Width="80" />
         <Label Content="Cena:" HorizontalAlignment="Left" Margin="90,100,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.508,-0.169" Width="80"/>
-        <TextBox x:Name="tbNazivUsluge" Validation.ErrorTemplate="{StaticResource ResourceKey=TextBoxError}" HorizontalAlignment="Left" Height="23" Margin="175,50,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="130" VerticalContentAlignment="Center">
+        <TextBox x:Name="tbNazivUsluge" Validation.ErrorTemplate="{StaticResource ResourceKey=TextBoxError}" HorizontalAlignment="Left" Height="23" Margin="175,50,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="130" VerticalContentAlignment="Center" MaxLength="15">
             <TextBox.Text>
                 <Binding Path="Naziv" UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
@@ -38,7 +38,22 @@
                 </Binding>
             </TextBox.Text>
         </TextBox>
-        <Button Content="Potvrdi" HorizontalAlignment="Left" Margin="115,214,0,0" VerticalAlignment="Top" Width="85" Height="30" IsDefault="True" Click="Potvrdi"/>
+        <Button Content="Potvrdi" HorizontalAlignment="Left" Margin="115,214,0,0" VerticalAlignment="Top" Width="85" Height="30" IsDefault="True" Click="Potvrdi">
+            <Button.Style>
+                <Style TargetType="Button">
+                    <Setter Property="IsEnabled" Value="False"/>
+                    <Style.Triggers>
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition Binding="{Binding Path=(Validation.HasError), ElementName=tbCenaUsluge}" Value="False"/>
+                                <Condition Binding="{Binding Path=(Validation.HasError), ElementName=tbNazivUsluge}" Value="False"/>
+                            </MultiDataTrigger.Conditions>
+                            <Setter Property="IsEnabled" Value="True"/>
+                        </MultiDataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
         <Button Content="Otkazi" HorizontalAlignment="Left" Margin="240,214,0,0" VerticalAlignment="Top" Width="85" Height="30" IsCancel="True"/>
         <TextBlock x:Name="tbIspisGreske" Foreground="Red" FontWeight="Bold" Margin="75,145,0,0"  Text="{Binding ElementName=tbCenaUsluge, Path=(Validation.Errors), Converter={StaticResource ResourceKey=converter}}" 
                            HorizontalAlignment="Left" Width="364" Height="23" VerticalAlignment="Top"/>
