--- a/POP-SF-53-2016-master/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/UI/KorisniciDodavanjeIzmena.xaml
+++ b/POP-SF-53-2016-master/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/UI/KorisniciDodavanjeIzmena.xaml
@@ -19,7 +19,7 @@
     </Window.Resources>
     <Grid>
         <Label Content="Ime:" HorizontalAlignment="Left"  Height="30" Margin="80,30,0,0" VerticalAlignment="Top" Width="84" />
-        <TextBox x:Name="tbIme" Validation.ErrorTemplate="{StaticResource ResourceKey=TextBoxError}" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="27" Margin="183,30,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143">
+        <TextBox x:Name="tbIme" Validation.ErrorTemplate="{StaticResource ResourceKey=TextBoxError}" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="27" Margin="183,30,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" MaxLength="20">
             <TextBox.Text>
                 <Binding Path="Ime" UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
@@ -29,7 +29,7 @@
             </TextBox.Text>
         </TextBox>
         <Label Content="Prezime:" HorizontalAlignment="Left" Height="30" Margin="80,70,0,0" VerticalAlignment="Top" Width="84"  RenderTransformOrigin="0.476,0.7"/>
-        <TextBox x:Name="tbPrezime" Validation.ErrorTemplate="{StaticResource ResourceKey=TextBoxError}" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="27" Margin="183,70,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143">
+        <TextBox x:Name="tbPrezime" Validation.ErrorTemplate="{StaticResource ResourceKey=TextBoxError}" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="27" Margin="183,70,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" MaxLength="20">
             <TextBox.Text>
                 <Binding Path="Prezime" UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
@@ -39,7 +39,7 @@
             </TextBox.Text>
         </TextBox>
         <Label Content="Korisnicko ime:" HorizontalAlignment="Left" Height="30" Margin="80,110,0,0" VerticalAlignment="Top" Width="127"  RenderTransformOrigin="0.488,0.667"/>
-        <TextBox x:Name="tbKorisnickoIme" VerticalContentAlignment="Center"  HorizontalAlignment="Left" Height="27" Margin="183,110,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143">
+        <TextBox x:Name="tbKorisnickoIme" VerticalContentAlignment="Center"  HorizontalAlignment="Left" Height="27" Margin="183,110,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" MaxLength="20">
             <TextBox.Text>
                 <Binding Path="KorisnickoIme" UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
@@ -48,10 +48,27 @@
                 </Binding>
             </TextBox.Text>
         </TextBox>
-        <Button x:Name="btnPotvrdi" Content="Potvrdi" HorizontalAlignment="Left" Height="33" Margin="100,270,0,0" VerticalAlignment="Top" Width="90" IsCancel="True" Click="Potvrdi"/>
+        <Button x:Name="btnPotvrdi" Content="Potvrdi" HorizontalAlignment="Left" Height="33" Margin="100,270,0,0" VerticalAlignment="Top" Width="90" IsCancel="True" Click="Potvrdi">
+            <Button.Style>
+                <Style TargetType="Button">
+                    <Setter Property="IsEnabled" Value="False"/>
+                    <Style.Triggers>
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition Binding="{Binding Path=(Validation.HasError), ElementName=tbIme}" Value="False"/>
+                                <Condition Binding="{Binding Path=(Validation.HasError), ElementName=tbPrezime}" Value="False"/>
+                                <Condition Binding="{Binding Path=(Validation.HasError), ElementName=tbKorisnickoIme}" Value="False"/>
+                                <Condition Binding="{Binding Path=(Validation.HasError), ElementName=tbLozinka}" Value="False"/>
+                            </MultiDataTrigger.Conditions>
+                            <Setter Property="IsEnabled" Value="True"/>
+                        </MultiDataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
         <Button x:Name="btnOtkazi" Content="Otkazi" HorizontalAlignment="Left" Height="33" Margin="230,270,0,0" VerticalAlignment="Top" Width="90" IsCancel="True"/>
         <Label Content="Lozinka:"   HorizontalAlignment="Left" Height="29" Margin="80,150,0,0" VerticalAlignment="Top" Width="99" />
-        <TextBox x:Name="tbLozinka" VerticalContentAlignment="Center" Validation.ErrorTemplate="{StaticResource ResourceKey=TextBoxError}" HorizontalAlignment="Left" Height="27" Margin="183,150,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143">
+        <TextBox x:Name="tbLozinka" VerticalContentAlignment="Center" Validation.ErrorTemplate="{StaticResource ResourceKey=TextBoxError}" HorizontalAlignment="Left" Height="27" Margin="183,150,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" MaxLength="20">
             <TextBox.Text>
                 <Binding Path="Lozinka" UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
