--- a/POP-SF-53-2016-master/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/UI/ProdajaProzor.xaml
+++ b/POP-SF-53-2016-master/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/UI/ProdajaProzor.xaml
@@ -18,12 +18,26 @@
         <local:ValidationConverter x:Key="converter"/>
     </Window.Resources>
     <Grid>
-        <Button x:Name="btnPotvrdi" Content="Potvrdi" HorizontalAlignment="Left" Height="40" Margin="211,537,0,0" VerticalAlignment="Top" Width="130" IsDefault="True" Click="Potvrdi"/>
+        <Button x:Name="btnPotvrdi" Content="Potvrdi" HorizontalAlignment="Left" Height="40" Margin="211,537,0,0" VerticalAlignment="Top" Width="130" IsDefault="True" Click="Potvrdi">
+            <Button.Style>
+                <Style TargetType="Button">
+                    <Setter Property="IsEnabled" Value="False"/>
+                    <Style.Triggers>
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition Binding="{Binding Path=(Validation.HasError), ElementName=tbKupac}" Value="False"/>
+                            </MultiDataTrigger.Conditions>
+                            <Setter Property="IsEnabled" Value="True"/>
+                        </MultiDataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
         <Button x:Name="btnOtkazi" Content="Otkazi" HorizontalAlignment="Left" Height="40" Margin="381,537,0,0" VerticalAlignment="Top" Width="130" IsCancel="True"/>
         <DataGrid x:Name="dgStavke"  AutoGenerateColumns="True"  CanUserResizeColumns="False" CanUserAddRows="False" ColumnWidth="*" SelectionMode="Single"  HorizontalAlignment="Left" Height="167" Margin="10,185,0,0" VerticalAlignment="Top" Width="342" AutoGeneratingColumn="dgStavke_AutoGeneratingColumn"/>
         <Button x:Name="btnPreuzmi" Content="Dodaj" HorizontalAlignment="Left" Height="35" Margin="10,360,0,0" VerticalAlignment="Top" Width="112" Click="DodajStavku"/>
         <Label Content="Kupac:"  HorizontalAlignment="Left" Height="31" Margin="199,24,0,0" VerticalAlignment="Top" Width="100" FontSize="16" />
-        <TextBox x:Name="tbKupac" Validation.ErrorTemplate="{StaticResource ResourceKey=TextBoxError}" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="29" TextWrapping="Wrap" VerticalAlignment="Top" Width="154" Margin="302,24,0,0">
+        <TextBox x:Name="tbKupac" Validation.ErrorTemplate="{StaticResource ResourceKey=TextBoxError}" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="29" TextWrapping="Wrap" VerticalAlignment="Top" Width="154" Margin="302,24,0,0" MaxLength="30">
             <TextBox.Text>
                 <Binding Path="Kupac" UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
