--- a/POP-SF-53-2016-master/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/UI/StavkeProzor.xaml
+++ b/POP-SF-53-2016-master/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/UI/StavkeProzor.xaml
@@ -30,7 +30,21 @@
                 </Binding>
             </TextBox.Text>
         </TextBox>
-        <Button x:Name="btnPotvrdi" Content="Potvrdi" HorizontalAlignment="Left" Height="34" Margin="173,380,0,0" VerticalAlignment="Top" Width="117" IsDefault="True" Click="PotvrdiUslugu"/>
+        <Button x:Name="btnPotvrdi" Content="Potvrdi" HorizontalAlignment="Left" Height="34" Margin="173,380,0,0" VerticalAlignment="Top" Width="117" IsDefault="True" Click="PotvrdiUslugu">
+            <Button.Style>
+                <Style TargetType="Button">
+                    <Setter Property="IsEnabled" Value="False"/>
+                    <Style.Triggers>
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition Binding="{Binding Path=(Validation.HasError), ElementName=tbKolicina}" Value="False"/>
+                            </MultiDataTrigger.Conditions>
+                            <Setter Property="IsEnabled" Value="True"/>
+                        </MultiDataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
         <Button Content="Otkazi" HorizontalAlignment="Left" Height="34" Margin="319,380,0,0" VerticalAlignment="Top" Width="118" IsCancel="True"/>
         <TextBlock x:Name="tbIspisGreske"  Margin="346,57,-48,0" Foreground="Red" FontWeight="Bold" 
                            Text="{Binding ElementName=tbKolicina, Path=(Validation.Errors), Converter={StaticResource ResourceKey=converter}}" 
