--- a/POP-SF-53-2016-master/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/UI/TipNamestajaDodavanjeIzmena.xaml
+++ b/POP-SF-53-2016-master/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/UI/TipNamestajaDodavanjeIzmena.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:POP_SF_53_2016_GUI.UI"
         mc:Ignorable="d"
-        Title="TipNamestajaDodavanjeIzmena" Height="300" Width="450" Background="#4169E1" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        Title="TipNamestajaDodavanjeIzmena" Height="270" Width="430" Background="#4169E1" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Window.Resources>
         <ControlTemplate x:Key="TextBoxError">
             <DockPanel LastChildFill="True">
@@ -19,7 +19,7 @@
     </Window.Resources>
     <Grid>
         <Label Content="Naziv:" HorizontalAlignment="Left" Height="28" Margin="100,55,0,0" VerticalAlignment="Top" Width="77" RenderTransformOrigin="0.92,0.248"/>
-        <TextBox x:Name="tbNazivTipa" Validation.ErrorTemplate="{StaticResource ResourceKey=TextBoxError}" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="28" Margin="180,55,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141" RenderTransformOrigin="0.894,-0.036">
+        <TextBox x:Name="tbNazivTipa" Validation.ErrorTemplate="{StaticResource ResourceKey=TextBoxError}" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="28" Margin="180,55,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141" RenderTransformOrigin="0.894,-0.036" MaxLength="20">
             <TextBox.Text>
                 <Binding Path="Naziv" UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
@@ -28,7 +28,21 @@
                 </Binding>
             </TextBox.Text>
         </TextBox>
-        <Button x:Name="btnPotvrdi" Content="Potvrdi" HorizontalAlignment="Left" Height="32" Margin="100,194,0,0" VerticalAlignment="Top" Width="81" Click="Potvrdi"/>
+        <Button x:Name="btnPotvrdi" Content="Potvrdi" HorizontalAlignment="Left" Height="32" Margin="100,194,0,0" VerticalAlignment="Top" Width="81" Click="Potvrdi">
+            <Button.Style>
+                <Style TargetType="Button">
+                    <Setter Property="IsEnabled" Value="False"/>
+                    <Style.Triggers>
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition Binding="{Binding Path=(Validation.HasError), ElementName=tbNazivTipa}" Value="False"/>
+                            </MultiDataTrigger.Conditions>
+                            <Setter Property="IsEnabled" Value="True"/>
+                        </MultiDataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
         <Button x:Name="btnOtkazi" Content="Otkazi" HorizontalAlignment="Left" Height="32" Margin="230,194,0,0" VerticalAlignment="Top" Width="81" IsCancel="True"/>
 
     </Grid>
